[gd_scene load_steps=22 format=3 uid="uid://bmabjyk6lgqb6"]

[ext_resource type="PackedScene" path="res://Ships/Ship.tscn" id="1"]
[ext_resource type="Script" path="res://Libraries/StateMachine/StateMachine.gd" id="2"]
[ext_resource type="Script" path="res://Ships/Player/States/Move.gd" id="3"]
[ext_resource type="Script" path="res://Ships/Player/States/Travel.gd" id="4"]
[ext_resource type="Script" path="res://Ships/Player/States/Dock.gd" id="5"]
[ext_resource type="Script" path="res://Ships/Player/PlayerShip.gd" id="6"]
[ext_resource type="Script" path="res://Ships/Player/States/Precision.gd" id="7"]
[ext_resource type="Resource" path="res://Ships/Player/player_map_icon.tres" id="8"]
[ext_resource type="Script" path="res://Ships/Player/PlayerGun.gd" id="9"]
[ext_resource type="Script" path="res://Ships/Player/Cargo.gd" id="10"]
[ext_resource type="PackedScene" path="res://VFX/Explosion/Explosion.tscn" id="11"]
[ext_resource type="Script" path="res://Ships/Player/PlayerLaserGun.gd" id="12"]
[ext_resource type="PackedScene" path="res://Ships/Guns/LaserGun/LaserGun.tscn" id="13"]
[ext_resource type="PackedScene" path="res://Ships/Guns/Projectiles/PlasmaShotPlayer.tscn" id="14"]
[ext_resource type="PackedScene" path="res://VFX/ShockwaveEmitter.tscn" id="15"]
[ext_resource type="PackedScene" path="res://VFX/RippleEmitter.tscn" id="16"]
[ext_resource type="PackedScene" path="res://VFX/MoveTrail.tscn" id="17"]
[ext_resource type="Script" path="res://Ships/Player/VFX.gd" id="18"]
[ext_resource type="PackedScene" uid="uid://y1bk02dsydum" path="res://VFX/DustEmitter.tscn" id="19"]
[ext_resource type="PackedScene" path="res://Ships/Player/ThrustersAudioPlayer.tscn" id="20"]
[ext_resource type="AudioStream" uid="uid://c3wt177okbvoc" path="res://Ships/Player/Player_Landing.wav" id="24"]

[node name="PlayerShip" instance=ExtResource("1")]
collision_mask = 14
script = ExtResource("6")
projectile_mask = 6
ExplosionEffect = ExtResource("11")
map_icon = ExtResource("8")

[node name="StateMachine" type="Node" parent="." index="2"]
script = ExtResource("2")
initial_state = NodePath("Move/Travel")

[node name="Move" type="Node" parent="StateMachine" index="0"]
script = ExtResource("3")
drag_linear_coeff = 0.04

[node name="Travel" type="Node" parent="StateMachine/Move" index="0"]
script = ExtResource("4")

[node name="ThrustersAudioPlayer" parent="StateMachine/Move/Travel" index="0" instance=ExtResource("20")]
bus = &"Thrusters"

[node name="Dock" type="Node" parent="StateMachine/Move" index="1"]
script = ExtResource("5")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="StateMachine/Move/Dock" index="0"]
stream = ExtResource("24")

[node name="Precision" type="Node" parent="StateMachine/Move" index="2"]
script = ExtResource("7")

[node name="Gun" parent="." index="3"]
position = Vector2(0, -30.5)
script = ExtResource("9")
Projectile = ExtResource("14")

[node name="CameraTransform" type="RemoteTransform2D" parent="." index="4"]

[node name="UITransform" type="RemoteTransform2D" parent="." index="5"]
remote_path = NodePath("../BarRig")
update_rotation = false

[node name="MapTimer" type="Timer" parent="." index="6"]

[node name="Cargo" type="Node" parent="." index="7"]
script = ExtResource("10")

[node name="VFX" type="Node2D" parent="." index="9"]
script = ExtResource("18")

[node name="MoveTrail" parent="VFX" index="0" instance=ExtResource("17")]
z_index = -1
lifetime = 0.3

[node name="Shockwave" parent="VFX" index="1" instance=ExtResource("15")]

[node name="Ripple" parent="VFX" index="2" instance=ExtResource("16")]
position = Vector2(0, 20)

[node name="DustRight" parent="VFX" index="3" instance=ExtResource("19")]
z_index = -1
position = Vector2(0, 20.2518)

[node name="DustLeft" parent="VFX" index="4" instance=ExtResource("19")]
z_index = -1
position = Vector2(0, 20.2518)
rotation = 3.66519

[node name="LaserGun" parent="." index="10" instance=ExtResource("13")]
rotation = -1.57079
script = ExtResource("12")
fire_action = "fire2"
